--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <script type="text/javascript" src="./assets/NRJS-73fb85f22d6722c495e"></script>
     <script src="./assets/nr-spa-1210.min.js"></script>
     <script type="text/javascript" async="" src="./assets/analytics.js"></script>
-    <script type="text/javascript" async="" src="./assets/js"></script>
+    <script type="text/javascript" async="" src="./assets/script.js"></script>
     <script src="./assets/WOfhanFn3UN5Z2dLyH1gO-5UNyc.js"></script>
     <link rel="icon" href="https://dex.loop.markets/icon.png">
     <link rel="shortcut icon" href="https://dex.loop.markets/fav.png">
-    <link rel="stylesheet" href="./assets/css2">
-    <link rel="stylesheet" href="./assets/icon">
+    <link rel="stylesheet" href="./assets/custom_style.css">
+    <link rel="stylesheet" href="./assets/icon.css">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <title>Loop Markets | Swap</title>
     <script type="text/javascript">
@@ -1211,14 +1211,14 @@
             sa: 1
         }
     </script>
-    <script async="" src="./assets/js(1)"></script>
+    <script async="" src="./assets/script_1.js"></script>
     <script>
         function gtag() {
             dataLayer.push(arguments)
         }
         window.dataLayer = window.dataLayer || [], gtag("js", new Date), gtag("config", "G-VY3Y6182VG")
     </script>
-    <script async="" src="./assets/js(2)"></script>
+    <script async="" src="./assets/script_2.js"></script>
     <script>
         function gtag() {
             dataLayer.push(arguments)
